--- a/web/index.html
+++ b/web/index.html
@@ -60,6 +60,7 @@
 					<ul class="product-properties">
 						<li><span class="propert-name">Prijs:</span><span class="product_price"></span></li>
 						<li><span class="propert-name">Code:</span><span class="product_code"></span></li>
+            <li><span class="propert-name">Rating:</span><span class="product_rating"></span></li>
 					</ul>
 					<input class="product_amount" type="number" value="1" min="1">
 					<input class="product_id" type="hidden" name="id" data-json="">
@@ -111,6 +112,7 @@
       app.appendChild(container)
         
             var data = JSON.parse(this.response) // vertaal response van API naar array met producten
+      console.log
             for (let row in data) { // herhaal voor elke product
               const product = data[row]
               var name = product.name.substr(0, 35)
@@ -124,7 +126,9 @@
               clone.querySelector(".product_description").textContent =`${product.description.substr(0, 100)}...`
               clone.querySelector(".product_price").textContent = `€ ${product.price.toFixed(2)}`
               clone.querySelector(".product_code").textContent = product.code
+              clone.querySelector(".product_rating").textContent = product.rating
               clone.querySelector(".product_id").value = product.id
+              
               clone.querySelector(".product_id").dataset.json = JSON.stringify(product)
               clone.querySelector(".product_image").src =`/images/${product.id}.jpg`
               container.appendChild(clone)
